client/src/Components/Credentials/inputField.css
.inputField {
    font-weight: 900; 
    color: grey;
    margin-bottom: 0%;
    text-align: start;
    transform: translateX(18%);
}

.inputBox {
    width: 229.1px;
    height: 38px;
    font-size: 20px;
    border: .5px solid rgb(198, 196, 196);
    border-radius: 4px;
}

.post-button{
    margin: 10px;
    width: 239.1px;
    font-weight: 900;
    height:38px;
    border-radius: 4px;
    background-color: rgb(43,122,95);
    color: white;
    font-size: 20px;
    transform: "translateY(18%)"
}

.sign-in-area, .sign-up-area {
    width: 360px;
}

.signUpHeader1 {
    text-align: start;
    padding-left: 10px ;
    margin-bottom: 0px;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: 40px;
    font-weight: bolder;
}

.signUpHeader2 {
    text-align: justify;
    padding-left: 10px;
    font-size: 15px;
}

